--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #database connection config
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/mysys?useUnicode=true&characterEncoding=utf-8&useSSL=true
+jdbc.url = jdbc:mysql://localhost:3306/darkhome?useUnicode=true&characterEncoding=utf-8&useSSL=true
 jdbc.username = root
 jdbc.password = miao
 
