--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,7 +2,7 @@
 jdbc.driver = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/darkHome?useUnicode=true&characterEncoding=utf-8&useSSL=true
 jdbc.username = root
-jdbc.password = 1m2n3b4v5c
+jdbc.password = miao
 
 #hibernate config
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
